A.G. Soccer-Ball (R07u)
Creature from the Black Lagoon L-2 & D-2
Demolition Man LX-4C (competition MOD)
Demolition Man H-5C (competition MOD)
Demolition Man H-6C (competition MOD)
Dirty Harry LF-2
Eight Ball (Older version)
Getaway: High Speed II, The L-5C (competition MOD)
Junk Yard 1.2C (competition MOD)
Meteor (Bugfix)
Orbitor 1 (No Timed Game)
Star Trek: The Next Generation LX-7C (competition MOD)
Star Wars 20th Anniversary 1.07 Spanish
Striker Xtreme 1.01 Italian
Time Warp L-3
Trident (Newer version, previous trident set was renamed to tridenta)



Version 2.9 (June 11th, 2017) - "Attack of the clones"
------------------------------------------------------------------------------

*** CORE/CPU *** Thanks to DJRobX, Quench and Bontango for some of these
Support for Bally's Boomerang prototype added!
 Pinfixer noticed the code was available in US patent #4,198,051,
 so we extracted it using OCR software, corrected obvious mistakes, fatal bugs and missing pieces
 until a working version of the code emerged.
 On top of that, there's also a bootleg version that works even a little better.
Support for Mirco's Spirit of 76 - finally, maybe the first commercial solid-state pinball game
Support for more Stargame games added (including new sound core for MEA 8000 emulation)
Support for Playbar's Bloody Roller, very similar hardware to Stargame's Slalom Code 0.3
Joctronic works now (e.g. Walkyria, yet still no good dumps for Punky Willy, and Pin Ball is missing entirely)
Removed a nasty hack from the Alvin G. driver
Added support for game-specific sound ROMs and correct sound bit handling for early WMS Sys3 games
Using GTS80 gen. 2 sound on Excalibur instead of gen. 3, enabling 8910 sounds (thanks to Jim Hernandez for noticing)
Fix some GTS3 DMD animations running too fast
Improved DMD brightness level mapping (again :)) for Gottlieb GTS3 & Alvin G.
Added extra display segments for some LTD-games, changed flipper enable for Sistema III